samples/_failures_safe/1761304150_afd426_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbb0ee47.c: In function ‘print_stats’:
./samples/SAFE/__tmp_fbb0ee47.c:124:5: error: expected declaration or statement at end of input
  124 |     if (stats == NULL) return;
      |     ^~
